# python-xlform

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
docs/source/: conf.py  index.rst  modules.rst  xlform.engine.rst  xlform.rst
tests/: test_engine_openpyxl.py  test_form.py  test_form_factory.py  test_form_item.py  test_form_item_cell.py  test_form_item_key_value_cells.py  test_form_item_table.py  test_item_doc.py
xlform/: __init__.py  exception.py  form.py
xlform/engine/: base.py  openpyxl.py  test.py
