[tool.poetry]
name = "xlform"
version = "0.1.0"
description = ""
authors = ["kumarstack55 <kumarstack55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
openpyxl = "^3.0.3"
mypy = "^0.780"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
coverage = "^5.1"
pre-commit = "^2.6.0"
setuptools = "^50.3.0"

[tool.black]
line-length = 79
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
